Added resend action for reseting and resending activation email.
